@@ -1,0 +1,8 @@
+require File.dirname(__FILE__) + '<%= '/..' * class_nesting_depth %>/../test_helper'
+
+describe "<%= class_name %>Controller", ActionController::TestCase do
+  # Replace this with your real tests.
+  it "should be true" do
+    assert true
+  end
+end
