@@ -1,0 +1,2 @@
+class <%= class_name %> < ActiveRecord::Base
+end
