@@ -1,3 +1,5 @@
+05/15/08 - First pass at overriding generators to produce specs [Matthew Bass]
+
 03/18/08 - it_should_validate_presence_of helper added [Matthew Bass]
 
 03/12/08 - layout.should.be nil is now supported [Rob Sanheim]
